--- a/notebooks/GloVe.ipynb
+++ b/notebooks/GloVe.ipynb
@@ -55,16 +55,16 @@
     {
      "data": {
       "text/plain": [
-       "[('onto', 0.18589073419570923),\n",
-       " ('buildings', 0.18523985147476196),\n",
-       " ('bungee', 0.17935125529766083),\n",
-       " ('accidents', 0.17021802067756653),\n",
-       " ('fair', 0.16874520480632782),\n",
-       " ('figures.', 0.16867220401763916),\n",
-       " ('families', 0.16840752959251404),\n",
-       " ('size.', 0.1681390255689621),\n",
-       " ('individual', 0.16532500088214874),\n",
-       " ('department?', 0.16068579256534576)]"
+       "[('entertainment', 0.22759167850017548),\n",
+       " ('weeks,', 0.19057254493236542),\n",
+       " ('unless', 0.17623214423656464),\n",
+       " ('treatment', 0.1741826832294464),\n",
+       " ('wooden', 0.17394684255123138),\n",
+       " ('learn', 0.17307960987091064),\n",
+       " ('point.', 0.17082807421684265),\n",
+       " ('welcome.', 0.17074212431907654),\n",
+       " ('beijing.', 0.17042849957942963),\n",
+       " ('administrative', 0.1670820116996765)]"
       ]
      },
      "execution_count": 5,
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    "base_model.wv.most_similar('what', topn=10)"
+    "base_model.wv.most_similar('girl', topn=10)"
    ]
   },
   {
@@ -103,16 +103,16 @@
     {
      "data": {
       "text/plain": [
-       "[('why', 0.8907533884048462),\n",
-       " ('how', 0.8789804577827454),\n",
-       " ('know', 0.8698911666870117),\n",
-       " ('think', 0.8441894054412842),\n",
-       " ('something', 0.8239272236824036),\n",
-       " ('thing', 0.8229970335960388),\n",
-       " ('that', 0.8225524425506592),\n",
-       " ('exactly', 0.8140221238136292),\n",
-       " ('thought', 0.8101893663406372),\n",
-       " ('tell', 0.8013006448745728)]"
+       "[('girls', 0.8245455622673035),\n",
+       " ('boy', 0.8148322105407715),\n",
+       " ('woman', 0.7700793147087097),\n",
+       " ('lady', 0.7557979226112366),\n",
+       " ('teen', 0.7407615780830383),\n",
+       " ('sexy', 0.7246244549751282),\n",
+       " ('blonde', 0.6959359645843506),\n",
+       " ('teenage', 0.6914814114570618),\n",
+       " ('chick', 0.6885996460914612),\n",
+       " ('babe', 0.688468873500824)]"
       ]
      },
      "execution_count": 7,
@@ -121,7 +121,7 @@
     }
    ],
    "source": [
-    "corpus_model.most_similar('what', topn=10)"
+    "corpus_model.most_similar('girl', topn=10)"
    ]
   },
   {
@@ -130,42 +130,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_model.train(tokens, total_examples=total_examples, epochs=base_model.epochs)\n",
-    "base_model_wv = base_model.wv"
+    "fine_model = Word2Vec(vector_size=300, min_count = 20, epochs=20)\n",
+    "fine_model.build_vocab(tokens)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('how', 0.4596197009086609),\n",
-       " ('anything', 0.4548874795436859),\n",
-       " ('where', 0.36545345187187195),\n",
-       " (\"what's\", 0.36517012119293213),\n",
-       " ('whatever', 0.3540089428424835),\n",
-       " ('well...', 0.3507554829120636),\n",
-       " ('what?', 0.33418241143226624),\n",
-       " ('something', 0.33149653673171997),\n",
-       " ('why', 0.3289160132408142),\n",
-       " ('nothing', 0.2993703782558441)]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "base_model_wv.most_similar('what', topn=10)"
+    "fine_model.train(tokens, total_examples=total_examples, epochs=fine_model.epochs)\n",
+    "fine_model_wv = fine_model.wv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('looked', 0.4677370488643646),\n",
+       " ('looking', 0.44000688195228577),\n",
+       " ('looks', 0.4197654128074646),\n",
+       " ('fit', 0.40606167912483215),\n",
+       " ('move', 0.39111045002937317),\n",
+       " ('moment.', 0.34159228205680847),\n",
+       " ('all!', 0.3370228111743927),\n",
+       " ('try', 0.33682525157928467),\n",
+       " ('pick', 0.3343583047389984),\n",
+       " ('last.', 0.3326244354248047)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fine_model_wv.most_similar('look', topn=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -194,12 +204,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('pleasure.', 0.5820543766021729),\n",
+       " ('nice', 0.4965497553348541),\n",
+       " ('pleasure,', 0.47940748929977417),\n",
+       " ('pleasant', 0.41643211245536804),\n",
+       " ('tom.', 0.39964956045150757),\n",
+       " ('great', 0.3727753758430481),\n",
+       " ('grandma', 0.37242355942726135),\n",
+       " ('lovely', 0.3650278151035309),\n",
+       " ('thoughtful', 0.36045509576797485),\n",
+       " ('talent', 0.35631096363067627)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fine_model.wv.most_similar(\"pleasure\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('birthday.', 0.6442477703094482),\n",
+       " ('wedding', 0.6132053732872009),\n",
+       " ('birthday,', 0.5925280451774597),\n",
+       " (\"wife's\", 0.5911794900894165),\n",
+       " ('surprise', 0.526892364025116),\n",
+       " (\"mother's\", 0.5216265320777893),\n",
+       " ('party?', 0.5086395144462585),\n",
+       " (\"sister's\", 0.5069356560707092),\n",
+       " (\"mom's\", 0.5007989406585693),\n",
+       " ('birthday?', 0.4949586093425751)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fine_model.wv.most_similar(\"birthday\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('great', 0.6634839177131653),\n",
+       " ('lovely', 0.5981692671775818),\n",
+       " ('fantastic', 0.5609707832336426),\n",
+       " ('beautiful', 0.5124997496604919),\n",
+       " ('pleasant', 0.4743961989879608),\n",
+       " ('perfect', 0.45208853483200073),\n",
+       " ('good', 0.4515893757343292),\n",
+       " ('fun', 0.4398481547832489),\n",
+       " ('nice', 0.4351896345615387),\n",
+       " ('clever', 0.4205162525177002)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fine_model.wv.most_similar(\"wonderful\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "base_model_wv.save_word2vec_format('../models/GloVe-Word2Vec/glove.bin')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
