--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -14,7 +14,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "# Comparative Analysis of Dialogue Summarization: Seq2Seq Transformer vs. Advanced Architectures like BART and T5\n",
+        "# Comparative Analysis of Dialogue Summarization: Seq2Seq Encoder-Decoder vs. Advanced Architectures like BART and T5\n",
         "\n",
         "**Group Name: Able Elba**\n",
         "\n",
@@ -461,28 +461,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this study, we conducted a comprehensive statistical analysis of the DialogSum dataset to understand the distribution characteristics of dialogue and summary lengths. This dataset comprises dialogues and their corresponding summaries, segmented into training and development (Dev) sets. The descriptive statistics for both sets are as follows:\n",
+        "We did a thorough statistical analysis of the DialogSum dataset in this work to better understand the distribution characteristics of dialogue and summary lengths. This dataset contains dialogues and their summaries, which have been divided into training and development (Dev) sets. The following are the descriptive statistics for both sets:\n",
         "\n",
         "- **Training Set**:\n",
-        "  - Dialogue Length: Mean = 130.99 words, Standard Deviation (std) = 70.98 words\n",
-        "  - Summary Length: Mean = 22.87 words, Standard Deviation = 10.71 words\n",
+        "  - Dialogue Length: 130.99 words on average, 70.98 words on average.\n",
+        "  - Summary Length: 22.87 words on average, 10.71 words on average.\n",
         "\n",
         "- **Development Set**:\n",
-        "  - Dialogue Length: Mean = 129.34 words, Standard Deviation = 66.14 words\n",
-        "  - Summary Length: Mean = 20.91 words, Standard Deviation = 9.77 words\n",
+        "  - Dialogue Length: 129.34 words on average, 66.14 words on average.\n",
+        "  - Summary Length: 20.91 words on average, 9.77 words on average.\n",
         "\n",
-        "These statistics highlight significant variance in the lengths of dialogues and summaries. In particular, dialogues are notably lengthier than their summaries. The histograms of these datasets exhibit the following characteristics:\n",
+        "These figures show that the lengths of dialogues and summaries vary significantly. Dialogues, in particular, are noticeably longer than summaries. These datasets' histograms have the following characteristics:\n",
         "\n",
-        "- **Training Set**:\n",
-        "  - The distribution of dialogue lengths is right-skewed, with most dialogues containing between 100-200 words, indicating a prevalence of concise dialogues and fewer instances of longer dialogues.\n",
-        "  - Summary lengths predominantly range between 10 and 30 words, also showing a right-skewed distribution.\n",
+        "- **Training Set**: - The distribution of dialogue lengths is biassed to the right, with the majority of dialogues containing between 100-200 words, showing a preference for brief dialogues and fewer instances of lengthier dialogues.\n",
+        "  - Summary lengths are primarily between 10 and 30 words, with a right-skewed distribution.\n",
         "\n",
-        "- **Development Set**:\n",
-        "  - Similar trends are observed in the development set, albeit with slightly different mean and standard deviation values.\n",
+        "- **Development Set**: - The development set shows similar tendencies, albeit with somewhat different mean and standard deviation values.\n",
         "\n",
-        "This distributional analysis is critical for our experiment as it informs the design of our summarization models. Specifically, it suggests an optimal summary length range that aligns with human annotations in the dataset. By tailoring our models to generate summaries within this range, we aim to achieve a balance between conciseness and informativeness, reflective of the human-annotated summaries in the DialogSum dataset.\n",
+        "This distributional study is important for our experiment since it influences the construction of our summarization models. It proposes an ideal summary length range that corresponds to human annotations in the dataset. We attempt to establish a compromise between conciseness and informativeness by adjusting our algorithms to generate summaries within this range, which is representative of the human-annotated summaries in the DialogSum dataset.\n",
         "\n",
-        "### Most Common Words"
+        "### Most Common Unigrams"
       ],
       "metadata": {
         "id": "RRAZgZSefdoL"
@@ -548,7 +546,39 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**COMMENTS**\n",
+        "A significant trend emerges in the frequency distribution of unigrams when the DialogSum dataset is examined. The most often identified words are: #Person1# #Person2#\n",
+        "I the to you and an of is\n",
+        "Several significant elements of the dataset and dialogue summaries are revealed by this distribution:\n",
+        "Markers for Conversation: The predominance of #Person1# and #Person2# emphasises the corpus's dialogic nature. These placeholders most likely represent two sides' conversational turns, emphasising the interactive and turn-taking nature of the talks.\n",
+        "First-person Account: The frequent use of the pronoun I emphasises the first-person perspective that is typical in talks. This implies that personal experiences, ideas, or actions are important in these interactions, which is an important factor when summarising.\n",
+        "\n",
+        "\n",
+        "A significant trend emerges in the frequency distribution of unigrams when the DialogSum dataset is examined. The most often identified words are:\n",
+        "\n",
+        "1. `#Person1#`\n",
+        "2. `#Person2#`\n",
+        "3. `I`\n",
+        "4. `the`\n",
+        "5. `to`\n",
+        "6. `you`\n",
+        "7. `and`\n",
+        "8. `a`\n",
+        "9. `of`\n",
+        "10. `is`\n",
+        "\n",
+        "This distribution reveals several key aspects of the dataset and dialogue summarization:\n",
+        "\n",
+        "1. **Markers for Conversation:** The predominance of #Person1# and #Person2# emphasises the corpus's dialogic nature. These placeholders most likely represent two sides' conversational turns, emphasising the interactive and turn-taking nature of the talks.\n",
+        "\n",
+        "2. **First-Person Perspective**: The frequent use of the pronoun I emphasises the first-person perspective that is typical in talks. This implies that personal experiences, ideas, or actions are important in these interactions, which is an important factor when summarising.\n",
+        "\n",
+        "3. **Function Words**: The prevalence of function words such as `the`, `to`, `you`, `and`, `a`, `of`, and `is` aligns with spoken English expectations, where such words are employed to frame conversation and convey basic relations and syntax.\n",
+        "\n",
+        "4. **Summarization Implications**: While these common words are important for understanding the structure and flow of dialogues, they may not add much to the content of a summary. This suggests that efficient summarization models for this dataset should concentrate on extracting the essence of the dialogue, potentially with less emphasis on these high-frequency but low-information phrases.\n",
+        "\n",
+        "5. **Dataset Characteriszation**: The high frequency of these phrases characterises the dataset. It implies that the dialogues are most likely everyday talks between two people, with a mix of subjective (first-person) and objective (descriptive) parts.\n",
+        "\n",
+        "Finally, an examination of the most prevalent unigrams in the DialogSum dataset provides significant insights into the nature of the dialogues and guides the construction of more effective summarising models. These findings highlight the necessity of focusing on meaningful content extraction rather than simply gathering often occuring but uninformative words.\n",
         "\n",
         "### Uni-gram Overlap"
       ],
@@ -628,7 +658,31 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**COMMENTS**\n",
+        "\n",
+        "These discoveries have a number of ramifications:\n",
+        "\n",
+        "1. **Moderate Level of Overlap**: The percentages of unigram overlap in both sets are moderate. This level of overlap shows that, while there is some verbatim material transfer from the source dialogues to the summaries, a considerable fraction of the summaries are paraphrased or constructed from scratch.\n",
+        "\n",
+        "2. **Indicative of Abstractive Summarization**: The average overlap of less than 50% indicates that the summaries in the dataset are primarily abstract. This suggests that the summaries rewrite, condense, or interpret the content rather than just extracting phrases or sentences from the talks.\n",
+        "\n",
+        "3. **Stability Across Sets**: The similarity in overlap percentages between the training and development sets indicates that the summarization approach utilised across the dataset is consistent. This is useful for training machine learning models since it exhibits consistency in data features.\n",
+        "\n",
+        "4. **Model creation Guidance**: The degree of unigram overlap can influence the creation of summarization models. Models should be able to capture the substance of the dialogues while also paraphrasing and compressing material in order to maintain a balance comparable to that observed in the dataset.\n",
+        "\n",
+        "5. **Benchmark for Evaluation**: These percentages can be used to compare summarization models. A model that achieves a similar amount of unigram overlap may be deemed to be well aligned with the properties of the dataset's human-generated summaries.\n",
+        "\n",
+        "6. **Content Representation**: The overlap percentage sheds light on the summaries' content representation. It implies that a substantial percentage of the content is portrayed differently than in the original discussions, emphasising the need of understanding and keeping context and intent in summary.\n",
+        "\n",
+        "In conclusion, the examination of unigram overlap in the DialogSum dataset emphasises the abstractive character of summarization and provides essential insights for the creation and evaluation of automated summarization models. These findings highlight the significance of a model's capacity to extract crucial information while simultaneously paraphrasing and simply representing the core of the dialogues.\n"
+      ],
+      "metadata": {
+        "id": "BV7px0ZS6bTH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
         "\n",
         "### Most Common Bi-grams"
       ],
@@ -703,7 +757,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**COMMENTS**\n",
         "\n",
         "**Loading Test Set and Hidden Set**"
       ],
