--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/dipankarsrirag/Dialogue-Summarisation/blob/main/notebooks/Report.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "\n",
         "# Comparative Analysis of Abstractive Dialogue Summarization: Seq2Seq Encoder-Decoder vs. Advanced Architectures like BART and T5\n",
@@ -1025,7 +1015,46 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Embedding Matrix"
+        "### Embedding Matrix Exploration in Dialogue Summarization\n",
+        "\n",
+        "#### Rationale for Using Word2Vec and GloVe\n",
+        "The decision to use Word2Vec embeddings improved with GloVe (Global Vectors for Word Representation) stems from the advantages of both methodologies:\n",
+        "- **Word2Vec's Mechanism**: Word2Vec captures semantic links between words by learning representations from the corpus's surrounding context. However, it may be limited in its ability to capture broader corpus-level word co-occurrence patterns.\n",
+        "- **GloVe's Corpus-Wide Context**: GloVe supplements Word2Vec by analysing global word-word co-occurrence statistics from a huge corpus, resulting in a more comprehensive understanding of latent contexts and token interactions.\n",
+        "\n",
+        "#### Analysis of Embedding Matrices\n",
+        "\n",
+        "##### Base Word2Vec Model\n",
+        "\n",
+        "- **Query**: `#person1#`\n",
+        "- **Top Related Words**: Include 'perfect!', 'peking', 'speaking', etc.\n",
+        "- **Observation**: The base model associates `#person1#` primarily with adjectives and unrelated terms, demonstrating a lack of contextual understanding regarding dialogue participants.\n",
+        "\n",
+        "##### GloVe-Enhanced Model\n",
+        "\n",
+        "- **Query**: `person1`\n",
+        "- **Top Related Words**: Include 'person2', 'person3', 'person4', etc.\n",
+        "- **Observation**: GloVe embeddings showcase a significant improvement by relating `person1` to other dialogue entities (e.g., 'person2', 'person3'). This indicates a better grasp of the dialogic context, though it may introduce additional variance in the embeddings.\n",
+        "\n",
+        "##### Finetuned Word2Vec on GloVe\n",
+        "\n",
+        "- **Query**: `#person1#`\n",
+        "- **Top Related Words**: Include '#person2#', 'sam', 'lucy', etc.\n",
+        "- **Observation**: The finetuned model aptly identifies `#person1#` in relation to other participants in the dialogue ('#person2#', '#person3#', and specific names). This result aligns closely with the desired outcome for dialogue summarization, suggesting an enhanced understanding of the relational dynamics in conversations.\n",
+        "\n",
+        "#### Implications for Dialogue Summarization\n",
+        "\n",
+        "The iterative process of constructing the embedding matrix offers important insights:\n",
+        "- **Contextual Relevance**: The progression from the fundamental Word2Vec model to a GloVe-enhanced and then finetuned model highlights the importance of contextual relevance in embeddings for dialogue summarization.\n",
+        "- **Balancing Specificity and Generality**: Whereas the GloVe model gives a broad knowledge of relationships, the fine-tuned Word2Vec model finds a balance by retaining specific relational dynamics relevant to dialogues.\n",
+        "- **Targeted Word Representations**: The fine-tuned model's ability to tightly correlate dialogue markers like '#person1#' with other participants implies a targeted grasp of conversational structures, which is required for effective summarization.\n",
+        "\n",
+        "### Conclusion\n",
+        "\n",
+        "This study's investigation of embedding matrices emphasises the need of correctly chosen word representations in dialogue summarization. The project develops an embedding matrix that accurately reflects the relationship dynamics within dialogues by leveraging the strengths of both Word2Vec and GloVe, as well as finetuning. This is a key component of the model that will improve the accuracy and relevancy of the generated summaries.\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "ADNlBpM3y6XZ"
@@ -5099,8 +5128,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "V100",
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
