--- a/notebooks/GloVe.ipynb
+++ b/notebooks/GloVe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,36 +49,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('entertainment', 0.22759167850017548),\n",
-       " ('weeks,', 0.19057254493236542),\n",
-       " ('unless', 0.17623214423656464),\n",
-       " ('treatment', 0.1741826832294464),\n",
-       " ('wooden', 0.17394684255123138),\n",
-       " ('learn', 0.17307960987091064),\n",
-       " ('point.', 0.17082807421684265),\n",
-       " ('welcome.', 0.17074212431907654),\n",
-       " ('beijing.', 0.17042849957942963),\n",
-       " ('administrative', 0.1670820116996765)]"
+       "[('perfect!', 0.19918687641620636),\n",
+       " ('peking', 0.18685618042945862),\n",
+       " ('speaking', 0.1850905865430832),\n",
+       " ('inside.', 0.1844509094953537),\n",
+       " ('chinese.', 0.17851804196834564),\n",
+       " ('24', 0.17759983241558075),\n",
+       " ('cake', 0.17517882585525513),\n",
+       " ('help', 0.17481420934200287),\n",
+       " ('education.', 0.17363373935222626),\n",
+       " ('test', 0.17225077748298645)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "base_model.wv.most_similar('girl', topn=10)"
+    "base_model.wv.most_similar('#person1#', topn=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,44 +89,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/gensim/models/keyedvectors.py:849: RuntimeWarning: invalid value encountered in divide\n",
-      "  dists = dot(self.vectors[clip_start:clip_end], mean) / self.norms[clip_start:clip_end]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[('girls', 0.8245455622673035),\n",
-       " ('boy', 0.8148322105407715),\n",
-       " ('woman', 0.7700793147087097),\n",
-       " ('lady', 0.7557979226112366),\n",
-       " ('teen', 0.7407615780830383),\n",
-       " ('sexy', 0.7246244549751282),\n",
-       " ('blonde', 0.6959359645843506),\n",
-       " ('teenage', 0.6914814114570618),\n",
-       " ('chick', 0.6885996460914612),\n",
-       " ('babe', 0.688468873500824)]"
+       "[('person2', 0.7480211853981018),\n",
+       " ('person3', 0.6154942512512207),\n",
+       " ('person4', 0.5084606409072876),\n",
+       " ('Person1', 0.4968014061450958),\n",
+       " ('or2', 0.48314839601516724),\n",
+       " ('myObj', 0.46837514638900757),\n",
+       " ('Person2', 0.4672240614891052),\n",
+       " ('myObject', 0.4668516516685486),\n",
+       " ('member1', 0.4665958881378174),\n",
+       " ('datarow', 0.4649624228477478)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corpus_model.most_similar('girl', topn=10)"
+    "corpus_model.most_similar('person1', topn=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,70 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "fine_model.train(tokens, total_examples=total_examples, epochs=fine_model.epochs)\n",
     "fine_model_wv = fine_model.wv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('looked', 0.4677370488643646),\n",
-       " ('looking', 0.44000688195228577),\n",
-       " ('looks', 0.4197654128074646),\n",
-       " ('fit', 0.40606167912483215),\n",
-       " ('move', 0.39111045002937317),\n",
-       " ('moment.', 0.34159228205680847),\n",
-       " ('all!', 0.3370228111743927),\n",
-       " ('try', 0.33682525157928467),\n",
-       " ('pick', 0.3343583047389984),\n",
-       " ('last.', 0.3326244354248047)]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fine_model_wv.most_similar('look', topn=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(\"doesn't\", 0.5743285417556763),\n",
-       " ('did', 0.40398046374320984),\n",
-       " ('do', 0.38602036237716675),\n",
-       " (\"doesn't.\", 0.3456938564777374),\n",
-       " ('does,', 0.34460973739624023),\n",
-       " ('is', 0.3222086429595947),\n",
-       " ('needs', 0.3137502670288086),\n",
-       " ('prefers', 0.3080991506576538),\n",
-       " ('makes', 0.3018656075000763),\n",
-       " ('likes', 0.2977132797241211)]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "base_model_wv.most_similar('does', topn=10)"
    ]
   },
   {
@@ -210,16 +144,16 @@
     {
      "data": {
       "text/plain": [
-       "[('pleasure.', 0.5820543766021729),\n",
-       " ('nice', 0.4965497553348541),\n",
-       " ('pleasure,', 0.47940748929977417),\n",
-       " ('pleasant', 0.41643211245536804),\n",
-       " ('tom.', 0.39964956045150757),\n",
-       " ('great', 0.3727753758430481),\n",
-       " ('grandma', 0.37242355942726135),\n",
-       " ('lovely', 0.3650278151035309),\n",
-       " ('thoughtful', 0.36045509576797485),\n",
-       " ('talent', 0.35631096363067627)]"
+       "[('#person2#', 0.6981426477432251),\n",
+       " ('sam', 0.6392289996147156),\n",
+       " ('lucy', 0.616733729839325),\n",
+       " ('jeff', 0.6109083294868469),\n",
+       " ('#person3#', 0.6028733849525452),\n",
+       " ('kate', 0.6001737713813782),\n",
+       " ('amy', 0.5880383849143982),\n",
+       " ('mary', 0.5794340968132019),\n",
+       " ('mike', 0.578300416469574),\n",
+       " ('alice', 0.5772162675857544)]"
       ]
      },
      "execution_count": 17,
@@ -228,65 +162,7 @@
     }
    ],
    "source": [
-    "fine_model.wv.most_similar(\"pleasure\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('birthday.', 0.6442477703094482),\n",
-       " ('wedding', 0.6132053732872009),\n",
-       " ('birthday,', 0.5925280451774597),\n",
-       " (\"wife's\", 0.5911794900894165),\n",
-       " ('surprise', 0.526892364025116),\n",
-       " (\"mother's\", 0.5216265320777893),\n",
-       " ('party?', 0.5086395144462585),\n",
-       " (\"sister's\", 0.5069356560707092),\n",
-       " (\"mom's\", 0.5007989406585693),\n",
-       " ('birthday?', 0.4949586093425751)]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fine_model.wv.most_similar(\"birthday\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('great', 0.6634839177131653),\n",
-       " ('lovely', 0.5981692671775818),\n",
-       " ('fantastic', 0.5609707832336426),\n",
-       " ('beautiful', 0.5124997496604919),\n",
-       " ('pleasant', 0.4743961989879608),\n",
-       " ('perfect', 0.45208853483200073),\n",
-       " ('good', 0.4515893757343292),\n",
-       " ('fun', 0.4398481547832489),\n",
-       " ('nice', 0.4351896345615387),\n",
-       " ('clever', 0.4205162525177002)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fine_model.wv.most_similar(\"wonderful\")"
+    "fine_model_wv.most_similar('#person1#', topn=10)"
    ]
   },
   {
