--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -41,8 +41,9 @@
         "    - Problem Statement\n",
         "    - Motivation\n",
         "2. Data Sources\n",
-        "3. Exploring Data\n",
-        "4. Methodology\n",
+        "3. Performance Metrics\n",
+        "4. Exploring Data\n",
+        "5. Methodology\n",
         "    - Custom Encoder-Decoder\n",
         "        - Custom Lite\n",
         "        - Custom Final\n",
@@ -52,14 +53,13 @@
         "    - BART\n",
         "        - Pretrained\n",
         "        - Finetuned\n",
-        "5. Experiment and Results\n",
+        "6. Experiment and Results\n",
         "    - Experimental Setup\n",
-        "    - Performance Metrics\n",
         "    - Results Analysis\n",
-        "6. Discussion\n",
+        "7. Discussion\n",
         "    - Model Comparison\n",
         "    - Implications\n",
-        "7. Conclusion\n",
+        "8. Conclusion\n",
         "    - Summary of Findings\n",
         "    - Future Work"
       ],
@@ -211,6 +211,7 @@
         }
       ],
       "source": [
+        "# Imports\n",
         "from __future__ import unicode_literals, print_function, division\n",
         "\n",
         "import json\n",
@@ -243,16 +244,23 @@
         "                          Trainer, TrainingArguments)\n",
         "import warnings\n",
         "\n",
+        "# For WordPuncktTokenizer\n",
         "nltk.download('punkt')\n",
         "\n",
         "warnings.filterwarnings('ignore')\n",
         "plt.switch_backend('agg')\n",
         "\n",
+        "# MAX LENGTH SET AFTER EDA. Will be explained in later sections\n",
         "MAX_LENGTH = 200\n",
+        "\n",
+        "# To generate summaries for human evaluation\n",
         "INDICES = [3, 43, 81]\n",
         "\n",
+        "# Notebook developed on Google Colab. Check 'Experimental Setup'\n",
         "drive.mount('/content/drive')\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "# For plotting\n",
         "%matplotlib inline\n"
       ]
     },
@@ -517,6 +525,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Count word frequencies for the training dataset\n",
         "word_counts_train = Counter(\" \".join(train_df['dialogue']).split())\n",
         "most_common_words_train = word_counts_train.most_common(10)\n",
         "words_train, counts_train = zip(*most_common_words_train)\n",
@@ -617,6 +626,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Function to calculate unigram overlap\n",
         "def unigram_overlap(row):\n",
         "    dialogue_words = set(row['dialogue'].split())\n",
         "    summary_words = set(row['summary'].split())\n",
@@ -720,6 +730,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Reading Test Set and Hidden Set provided by DialogSum\n",
         "test_df = pd.read_json(\"/content/drive/MyDrive/COMP9444/data/raw/dialogsum/dialogsum.test.jsonl\", lines = True)[['dialogue', 'summary1']]\n",
         "test_df.columns = ['dialogue', 'summary']\n",
         "test_dialogues, references = list(test_df['dialogue']), list(test_df['summary'])\n",
