--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -1098,7 +1098,7 @@
         "\n",
         "\n",
         "**Code used to generate the finetuned embeddings**\n",
-        "```[python]\n",
+        "```python\n",
         "# Loads the GloVe embedding in the Word2Vec word_vector format\n",
         "def load_glove_model(glove_file_path):\n",
         "    glove_model = KeyedVectors.load_word2vec_format(glove_file_path, binary=False, no_header=True)\n",
